@@ -13,4 +13,6 @@ RUN ./mvnw dependency:go-offline
 COPY ./src ./src
 
 RUN ./mvnw clean package
-CMD ["java","-XX:+PrintGCDetails" ,"-XX:+PrintGCDateStamps" ,"-Xloggc:gc.log", "-jar",   "./target/consultations-service-0.0.1-SNAPSHOT.jar"]
+CMD ["java","-XX:+CMSClassUnloadingEnabled",
+                                    "-XX:+UseConcMarkSweepGC",
+                                    "-XX:+ClassUnloading","-XX:+PrintGCDetails" ,"-XX:+PrintGCDateStamps" ,"-Xloggc:gc.log", "-jar",   "./target/consultations-service-0.0.1-SNAPSHOT.jar"]
